apps/kopic/ws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopic-ws
  namespace: kopic
  labels:
    app: kopic-ws
spec:
  type: ClusterIP
  selector:
    app: kopic-ws
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kopic-ws-headless
  namespace: kopic
  labels:
    app: kopic-ws
spec:
  clusterIP: None
  selector:
    app: kopic-ws
  ports:
  - name: http
    port: 8080
    targetPort: 8080
