apps/kopic/ws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kopic-ws-ingress
  namespace: kopic
spec:
  ingressClassName: traefik
  rules:
  - host: jhhomehub.gonetis.com
    http:
      paths:
      - path: /kopic/ws
        pathType: Prefix
        backend:
          service:
            name: kopic-ws
            port:
              number: 8080
